--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,57 @@ body {
     font-family: 'Abel', sans-serif;
     background-color: #E6E6E6;
 }
+#navbar-row {
+    background-color: white;
+}
+div {
+    border: solid 1px black;
+}
 
+li {
+    display: inline;
+    list-style: none;
 
+}
+h4 {
+    display: inline;
+}
+#header-info {
+    text-align: center;
+}
 
 .logo {
     width: 105px;
     height: 105px;
-    border-radius: 100px;
+    border-radius: 40px;
+
+}
+.icon-list {
+    padding: 10px;
+}
+
+.btn-circle {
+    width: 80px;
+    height: 80px;
+    padding: 6px 0;
+    border-radius: 60px;
+    border: solid white 5px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 1.3;
+    margin: .5em;
+}
+#red {
+    background-color: #E6563B;
+}
+#yellow {
+    background-color: #EB9D3A;
+}
+#green {
+    background-color: #7CB06C;
+}
+#blue {
+    background-color: #00ABA9;
 }
