--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,26 @@ div {
 }
 
 li {
-    display: inline;
     list-style: none;
+}
+
+#navbar-row li {
+    display: inline;
 
 }
+
 h4 {
     display: inline;
 }
+
+li img {
+    float: left;
+}
+
+img {
+    width: 100%;
+}
+
 #header-info {
     text-align: center;
 }
@@ -47,15 +60,35 @@ h4 {
     line-height: 1.3;
     margin: .5em;
 }
-#red {
+
+.btn-sm {
+    width: 18px;
+    height: 18px;
+    border: none;
+    font-size: 6px;
+    float: right;
+}
+
+.fp{
+    display: inline-block;
+}
+
+.sidebar {
+    width: 20%;
+}
+
+.red {
     background-color: #E6563B;
 }
-#yellow {
+
+.yellow {
     background-color: #EB9D3A;
 }
-#green {
+
+.green {
     background-color: #7CB06C;
 }
-#blue {
+
+.blue {
     background-color: #00ABA9;
 }
