--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,11 @@ body {
     background-color: white;
 }
 div {
-    border: solid 1px black;
+
+}
+ul {
+    margin: 0;
+    padding: 0;
 }
 
 li {
@@ -24,13 +28,19 @@ li {
 h4 {
     display: inline;
 }
+h5 {
+    margin-bottom: 2em;
+}
 
 li img {
     float: left;
+    margin-right: 1em;
+
 }
 
 img {
     width: 100%;
+    height: 80%;
 }
 
 #header-info {
@@ -75,6 +85,7 @@ img {
 
 .sidebar {
     width: 20%;
+    margin-bottom: 2em;
 }
 
 .red {
@@ -91,4 +102,13 @@ img {
 
 .blue {
     background-color: #00ABA9;
+}
+#twitter {
+    height: 25px;
+    width: auto;
+    float: left;
+    margin-right: 1em;
+}
+.sw-row {
+    margin-bottom: 2em;
 }
