--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ li img {
 
 img {
     width: 100%;
-    height: 80%;
+    height: auto;
 }
 
 #header-info {
@@ -69,20 +69,17 @@ img {
 .btn-circle {
     width: 80px;
     height: 80px;
-    padding: 6px 0;
     border-radius: 60px;
     border: solid white 5px;
-    text-align: center;
     color: white;
     font-weight: bold;
     font-size: 12px;
-    line-height: 1.3;
     margin: .5em;
 }
 
 .btn-sm {
-    width: 18px;
-    height: 18px;
+    width: 15px;
+    height: 15px;
     border: none;
     font-size: 6px;
     float: right;
@@ -121,6 +118,4 @@ img {
 .sw-row {
     margin-bottom: 2em;
 }
-.nav-buttons {
-    margin: 0 auto;
-}
+
