--- a/css/styles.css
+++ b/css/styles.css
@@ -161,3 +161,12 @@ img {
         max-width: 100%;
     }
 }
+
+@media (max-width: 767px) {
+    #navbar-row {
+        background-color: transparent;
+        position: relative;
+        padding: 0;
+        margin: 0;
+    }
+}
